...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/presetInput"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="Preset"
                app:helperText="Choose an existing preset or modify individual settings in 'Advanced Configuration`">
...
                    android:layout_height="wrap_content"
                    android:layout_gravity="fill"
                    android:text="Visa2Fly"
                    />

                <Button
                    android:id="@+id/buttonFlightHome"
                    android:layout_width="0dp"
                    android:layout_columnWeight="1"
                    android:layout_height="wrap_content"
                    android:layout_gravity="fill"
                    android:text="Flights Home" />

                <Button
                    android:id="@+id/buttonFlightTrips"
                    android:layout_width="0dp"
                    android:layout_columnWeight="1"
                    android:layout_height="wrap_content"
...
