<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="ixigosdk_not_connected">Maybe you are not connected to the internet? Please try again later.</string>
    <string name="ixigosdk_retry">Retry</string>
    <string name="ixigosdk_go_back">Go Back</string>
    <string name="ixigosdk_exit_top_bar_confirmation">Are you sure you want to go back to %1$s?</string>
    <string name="ixigosdk_cancel">Cancel</string>
</resources>